Resolve merge conflict

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="mainvisual">
             <div class="text">
                 <p>変わりたいと<br>
-                思った瞬間が変われるとき。</p>
+                    思った瞬間が変われるとき。</p>
             </div>
             <img src="img/mainvisual.png" alt="mainvisual">
         </div>
@@ -106,7 +106,7 @@
                             <p>信頼の実績が<br>
                                 あなたの挑戦を支えます</p>
                         </div>
-                    </div>        
+                    </div>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                         <button class="sp-btn" data-target="page4">詳しく見る→</button>
                     </li>
                 </ul>
-<!--///// 専用ページ4枚 ここから/////-->
+                <!--///// 専用ページ4枚 ここから/////-->
                 <div id="modal-bg"></div>
 
                 <div class="page-modal" id="page1">
@@ -266,8 +266,8 @@
                         </div>
                     </div>
                 </div>
-<!--///// 専用ページ4枚 ここまで /////-->
-<!--///// imgページ2枚 ここから /////-->
+                <!--///// 専用ページ4枚 ここまで /////-->
+                <!--///// imgページ2枚 ここから /////-->
                 <div class="page-modal-img" id="page5">
                     <button class="close-btn">×</button>
                     <p class="number">ex</p>
@@ -306,7 +306,7 @@
                         </div>
                     </div>
                 </div>
-<!--///// imgページ2枚 ここまで /////-->
+                <!--///// imgページ2枚 ここまで /////-->
                 <div class="sp-apply">
                     <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
                 </div>
@@ -415,55 +415,54 @@
 
         <section id="flow" class="flow">
             <h2 class="section-title">受講の流れ</h2>
-            <div class="wrapper">
-                <div class="flow-inner">
-                    <div class="flow-items">
-                        <div class="flow-item odd-number">
-                            <img src="img/flow1.png" alt="flow1" class="flow-img">
-                            <div class="flow-text first-text">
-                                <span>面談</span>
-                                <span>入校/手続き</span>
-                                <span>目標設定</span>
-                            </div>
-                        </div>
-                        <div class="flow-item even-number">
-                            <img src="img/flow2.png" alt="flow1" class="flow-img">
-                            <div class="flow-text">
-                                <span>Progate</span>
-                                <span>環境構築</span>
-                            </div>
+            <div class="wrapper-flow">
+                <div class="flow-items top-number">
+
+                    <div class="flow-item">
+                        <img src="img/flow1.png" alt="flow1" class="flow-img">
+                        <div class="flow-text first-text">
+                            <span>面談</span>
+                            <span>入校/手続き</span>
+                            <span>目標設定</span>
                         </div>
                     </div>
-                    <div class="flow-items">
-                        <div class="flow-item odd-number">
-                            <img src="img/flow3.png" alt="flow1" class="flow-img">
-                            <div class="flow-text">
-                                <span>模写コーディング</span> <span>目標設定</span>
-                            </div>
-                        </div>
-                        <div class="flow-item even-number">
-                            <img src="img/flow4.png" alt="flow1" class="flow-img">
-                            <div class="flow-text forth-text">
-                                <span>WordPress</span>
-                                <span>オリジナルサイト制作</span>
-                            </div>
+                    <div class="flow-item">
+                        <img src="img/flow2.png" alt="flow1" class="flow-img">
+                        <div class="flow-text">
+                            <span>Progate</span>
+                            <span>環境構築</span>
                         </div>
                     </div>
-                    <div class="flow-items">
-                        <div class="flow-item odd-number">
-                            <img src="img/flow5.png" alt="flow1" class="flow-img">
-                            <div class="flow-text">
-                                <span>案件獲得フェーズ</span> <span>目標設定</span>
-                            </div>
-                        </div>
-                        <div class="flow-item even-number">
-                            <img src="img/flow6.png" alt="flow1" class="flow-img">
-                            <div class="flow-text">
-                                <span>案件獲得</span>
-                            </div>
+                    <div class="flow-item">
+                        <img src="img/flow3.png" alt="flow1" class="flow-img">
+                        <div class="flow-text">
+                            <span>模写コーディング</span> <span>目標設定</span>
                         </div>
                     </div>
                 </div>
+                <!-- </div> -->
+                <div class="flow-items bottom-number">
+                    <div class="flow-item">
+                        <img src="img/flow4.png" alt="flow1" class="flow-img">
+                        <div class="flow-text">
+                            <span>WordPress</span>
+                            <span>オリジナルサイト制作</span>
+                        </div>
+                    </div>
+                    <div class="flow-item">
+                        <img src="img/flow5.png" alt="flow1" class="flow-img">
+                        <div class="flow-text">
+                            <span>案件獲得フェーズ</span>
+                        </div>
+                    </div>
+                    <div class="flow-item">
+                        <img src="img/flow6.png" alt="flow1" class="flow-img">
+                        <div class="flow-text">
+                            <span>案件獲得</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -615,12 +614,12 @@
                     </dd>
                 </dl>
 
-                <div class="map">
+                <!-- <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1371.1960754700585!2d136.90359822248058!3d35.17476619000111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6003712b29048303%3A0x4d32fd4e42e4114d!2z44CSNDYwLTAwMDIg5oSb55-l55yM5ZCN5Y-k5bGL5biC5Lit5Yy65Li444Gu5YaF77yT5LiB55uu77yR77yV4oiS77yS77yS!5e0!3m2!1sja!2sjp!4v1764166024538!5m2!1sja!2sjp"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
