LINEQRページ作成済

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                         </div>
                     </div>
                 </div>
-                <!--///// 専用ページ4枚 ここまで /////-->
-                <!--///// imgページ2枚 ここから /////-->
+<!--///// 専用ページ4枚 ここまで /////-->
+<!--///// imgページ2枚 ここから /////-->
                 <div class="page-modal-img" id="page5">
                     <button class="close-btn">×</button>
                     <p class="number">ex</p>
@@ -308,9 +308,19 @@
                         </div>
                     </div>
                 </div>
-                <!--///// imgページ2枚 ここまで /////-->
+<!--///// imgページ2枚 ここまで /////-->
+<!--///// LINEQRページ ここから /////-->
+                <div class="page-modal-apply" id="page7">
+                    <button class="close-btn">×</button>
+                    <p class="number">ex</p>
+                    <p class="text">👍<br>無料カウンセリング<br>まずは運営公式LINEへ</p>
+                    <div class="small-page-apply">
+                        <img src="img/official-line.png" alt="">
+                    </div>
+                </div>
+<!--///// LINEQRページ ここまで /////-->
                 <div class="sp-apply">
-                    <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
+                    <button class="contact-btn" data-target="page7">無料カウンセリングを申し込む</button>
                 </div>
 
                 <div class="sp-movie">
@@ -523,7 +533,7 @@
 
             <div class="btn-inner">
                 <div id="btn_animation" class="step-btn">
-                    <a href="" class="btn">無料カウンセリングを申し込む</a>
+                    <button class="btn" data-target="page7">無料カウンセリングを申し込む</button>
                 </div>
             </div>
 
@@ -677,7 +687,7 @@
         <div class="copyright">
             <small>&copy; 2025 Jane Doe</small>
         </div>
-        <a href="#" class="cta-btn">無料 <br>カウンセリングを <br>予約する</a>
+        <button class="cta-btn" data-target="page7">無料 <br>カウンセリングを <br>予約する</button>
     </footer>
 
     <!-- プラグイン「slick」のjsを読み込む -->
