--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
                         </div>
                         <div class="small-content">
                             <h4>画面共有しながら授業</h4>
-                            <p><img src="img/sp-01.png" alt="sp-01"></p>
+                            <p>授業はすべてオンラインで行われ、画面共有を使いながら進めていきます。<br>
+                                実際の画面を見てもらいながら、講師がリアルタイムで指導やアドバイスをしてくれます。
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -270,7 +272,7 @@
 <!--///// imgページ2枚 ここから /////-->
                 <div class="page-modal-img" id="page5">
                     <button class="close-btn">×</button>
-                    <p class="number">ex</p>
+                    <p class="number"></p>
                     <p class="text">作業会の様子</p>
                     <div class="small-page-img-img">
                         <div class="small-content-img">
@@ -289,7 +291,7 @@
                 </div>
                 <div class="page-modal-img" id="page6">
                     <button class="close-btn">×</button>
-                    <p class="number">ex</p>
+                    <p class="number"></p>
                     <p class="text">イベントの様子</p>
                     <div class="small-page-img-img">
                         <div class="small-content-img">
@@ -310,8 +312,8 @@
 <!--///// LINEQRページ ここから /////-->
                 <div class="page-modal-apply" id="page7">
                     <button class="close-btn">×</button>
-                    <p class="number">ex</p>
-                    <p class="text">👍<br>無料カウンセリング<br>まずは運営公式LINEへ</p>
+                    <p class="number"></p>
+                    <p class="text">無料カウンセリング<br>まずは運営公式LINEへ</p>
                     <div class="small-page-apply">
                         <img src="img/official-line.png" alt="">
                     </div>
