さくらパート修正

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <h4>セミナー</h4>
                             <p>週に一度、現役エンジニアや運営メンバーによるセミナーを開催しています。<br>
                                 技術的な話だけでなく、仕事への向き合い方やモチベーションを高める内容など、毎回新たな気づきを得られる時間です。<br>
-                                セミナー後は質問部屋で登壇者と直接話すこともできます。</p>
+                                セミナー後は登壇者に直接質問することもできます。</p>
                         </div>
                         <div class="small-content">
                             <h4>もくもく部屋</h4>
@@ -231,9 +231,9 @@
                         </div>
                         <div class="small-content">
                             <h4>ハッカソン</h4>
-                            <p>仲間と共にゼロからHPを作り上げる実践型イベント。<br>
+                            <p>仲間と共にゼロからホームページを作り上げる実践型イベント。<br>
                                 スキル向上、仲間づくり、キャリアのチャンスが一気に手に入る挑戦の場です。<br>
-                                最後には発表を行い、投票によって優勝者を決めます。</p>
+                                最後には発表を行い、投票によって優勝チームが決まります。</p>
                         </div>
                     </div>
                 </div>
@@ -244,12 +244,12 @@
                     <div class="small-page">
                         <div class="small-content">
                             <h4>オリジナルサイト作成</h4>
-                            <p>オリジナルサイトを制作し、ポートフォリオとして活用できる実践的なスキルを身につけます。<br>
-                                プロ視点でフィードバックし、クオリティアップまでしっかりサポートします。</p>
+                            <p>オリジナルサイトを0から制作し、ポートフォリオとして活用できる実践的なスキルを身につけます。<br>
+                                プロ視点でのフィードバックを受け、クオリティアップまでしっかりサポートします。</p>
                         </div>
                         <div class="small-content">
                             <h4>週1回の授業</h4>
-                            <p>講師と週に１回ミーティングを実施し、進捗管理や課題解決をサポートします。<br>
+                            <p>専属講師と週に1回の授業を通して、進捗管理や課題解決をサポートします。<br>
                                 迷いやすい営業フェーズでも、実務的なアドバイスを受けながら着実に前へ進める体制です。<br>
                                 モチベーション維持にもつながります。</p>
                         </div>
@@ -397,7 +397,7 @@
                                 <span>在校生</span>
                             </div>
                             <p>子どもが生まれたことをきっかけに、家族の時間を大切にできる働き方へシフトしたいと育休中に学習を開始。<br>
-                                手厚いサポートに支えられながら、前向きにカリキュラムに取り組めています。</p>
+                                手厚いサポートに支えられながら、前向きにカリキュラムに取り組めている。</p>
                         </div>
                     </div>
                 </div>
@@ -560,7 +560,7 @@
                 </ul>
                 <ul class="q-and-a-list">
                     <li class="list-question"><span>Q</span>どの言語を学べますか？</li>
-                    <li class="list-answer"><span>A</span>HTML/CSS/JavaScriptなど、HP制作に必要な基礎を学べます。</li>
+                    <li class="list-answer"><span>A</span>HTML/CSS/JavaScriptなど、ホームページ制作に必要な基礎を学べます。</li>
                 </ul>
                 <ul class="q-and-a-list">
                     <li class="list-question"><span>Q</span>オンラインでも受講できますか？</li>
@@ -668,11 +668,11 @@
                 <p>各種SNS</p>
                 <div class="container">
                     <div class="content-1">
-                        <a href=""></a><img src="img/Instagram1.png" alt="Instagramアイコン">
+                        <a href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/Instagram1.png" alt="Instagramアイコン"></a>
                         <p>かかし</p>
                     </div>
                     <div class="content-2">
-                        <img src="img/Instagram2.png" alt="Instagramアイコン">
+                        <a href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/Instagram2.png" alt="Instagramアイコン"></a>   
                         <p>いるか</p>
                     </div>
                 </div>
