--- a/index.html
+++ b/index.html
@@ -62,12 +62,20 @@
     </div>
 
     <main>
-        <div class="mainvisual">
+        <!-- <div class="mainvisual">
             <div class="text">
                 <p>変わりたいと<br>
                     思った瞬間が変われるとき。</p>
             </div>
         <img src="img/mainvisual.png" alt="mainvisual">
+        </div> -->
+        <div class="mainvisual">
+            <div class="text fancy-wipe-container">
+                <span class="text-base">変わりたいと<br>思った瞬間が変われるとき。</span>
+                <span class="wipe-in">変わりたいと<br>思った瞬間が変われるとき。</span>
+                <span class="blur-in">変わりたいと<br>思った瞬間が変われるとき。</span>
+            </div>
+            <img src="img/mainvisual.png" alt="mainvisual">
         </div>
     </main>
         <section id="about" class="about">
@@ -182,7 +190,7 @@
                     <p class="number">02</p>
                     <p class="text">作業会</p>
                     <div class="small-page-img-animation">
-                        <button class="small-page-img" data-target="page5">→作業会の様子はこちら←</button>
+                        <button class="small-page-img" data-target="page5">作業会の様子はこちら</button>
                     </div>
                     <div class="small-page">
                         <div class="small-content">
@@ -213,7 +221,7 @@
                     <p class="number">03</p>
                     <p class="text">イベント</p>
                     <div class="small-page-img-animation">
-                        <button class="small-page-img" data-target="page6">→イベントの様子はこちら←</button>
+                        <button class="small-page-img" data-target="page6">イベントの様子はこちら</button>
                     </div>
                     <div class="small-page">
                         <div class="small-content">
