--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
     <!-- セクション毎のcssファイル -->
-    <link rel="stylesheet" href="css/shared-parts.css">
+    <!-- <link rel="stylesheet" href="css/shared-parts.css">
     <link rel="stylesheet" href="css/_01header.css">
     <link rel="stylesheet" href="css/_02mainvisual.css">
     <link rel="stylesheet" href="css/_03pronavi.css">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/_09money.css">
     <link rel="stylesheet" href="css/_10question.css">
     <link rel="stylesheet" href="css/_11company.css">
-    <link rel="stylesheet" href="css/_12footer.css">
+    <link rel="stylesheet" href="css/_12footer.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -314,7 +314,7 @@
                 <div class="page-modal-apply" id="page7">
                     <button class="close-btn">×</button>
                     <p class="number"></p>
-                    <p class="text">無料カウンセリング<br>まずは運営公式LINEへ</p>
+                    <p class="text">無料カウンセリング<br>まずはプロナビ公式LINEへ</p>
                     <div class="small-page-apply">
                         <img src="img/official-line.png" alt="">
                     </div>
