--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
             <div class="wrapper">
                 <div class="about-container">
                     <div class="about-text">
-                        <p>プロナビは「プログラミングで変わりたい」と思っているあなたを<br>
-                            全力でサポートするプログラミングスクールです。<br>
+                        <p>プロナビは「プログラミングで変わりたい」と思っているあなたを全力でサポートするプログラミングスクールです。<br>
                             あなたに合わせた“あなただけの学習プラン”をともに作成し、</p>
                         <p class="last_line">目標達成に向けて選任コーチがあなたをサポートします。</p>
 
                         <p>“未来を変える”ということは決して簡単なことではありません。<br>
                             時には気持ちが折れそうになってしまうこともあるでしょう。<br>
-                            ですが、プロナビではともに挑戦をする沢山の仲間と繋がれます。</p>
+                            ですがプロナビでは共に挑戦をする沢山の仲間と繋がれます。</p>
                         <p class="last_line">あなたを１人にすることはありません。</p>
                         <p>プロナビのゴールは<br>
                             <span>“あなたが目標達成した先の未来をともに描くこと”</span><br>
@@ -640,7 +639,7 @@
         <div class="footer-box wrapper">
             <div class="footer-left">
                 <h1><a href="#"><img src="img/logo.png" alt="PRONAVIロゴ"></a></h1>
-                <nav>
+                <div class="footer-nav">
                     <ul>
                         <a href="#about">
                             <li>プロナビとは</li>
@@ -664,7 +663,7 @@
                             <li>会社概要</li>
                         </a>
                     </ul>
-                </nav>
+                </div>
             </div>
 
             <div class="footer-right">
