--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 <div class="flow-item">
                     <img src="./img/flow3.png" alt="flow1" class="flow-img">
                     <div class="flow-text">
-                        <span>模写コーディング</span> <span>目標設定</span>
+                        <span>模写コーディング</span>
                     </div>
                 </div>
             </div>
